Fix transition stucked problem by decreasing transition time

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
     background-color: rgba(0,0,0,0);
     border-color: rgba(0,0,0,0.8);
     border-style: solid;
-    transition: all 0.08s;
+    transition: all 0.06s;
 }
 
 .clicked {
